tests/algorithms/transpiler/CPP/divide_and_conquer/closest_pair_of_points.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/closest_pair_of_points.cpp:80:215: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/closest_pair_of_points.cpp:80:251: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/closest_pair_of_points.cpp: In function ‘double closest_pair_of_points_sqr(std::vector<std::vector<double> >&, std::vector<std::vector<double> >&, int64_t)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/closest_pair_of_points.cpp:211:311: error: cannot bind non-const lvalue reference of type ‘std::vector<std::vector<double> >&’ to an rvalue of type ‘std::vector<std::vector<double> >’
  211 |     double left = closest_pair_of_points_sqr(px, ([&](const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__v)>, std::string>) return __v.substr(int64_t(0), mid - int64_t(0)); else return std::vector<typename std::decay_t<decltype(__v)>::value_type>(__v.begin()+int64_t(0), __v.begin()+mid); })(py), mid);
      |                                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/closest_pair_of_points.cpp:206:107: note:   initializing argument 2 of ‘double closest_pair_of_points_sqr(std::vector<std::vector<double> >&, std::vector<std::vector<double> >&, int64_t)’
  206 | double closest_pair_of_points_sqr(std::vector<std::vector<double>>& px, std::vector<std::vector<double>>& py, int64_t count) {
      |                                                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/closest_pair_of_points.cpp:212:295: error: cannot bind non-const lvalue reference of type ‘std::vector<std::vector<double> >&’ to an rvalue of type ‘std::vector<std::vector<double> >’
  212 |     double right = closest_pair_of_points_sqr(py, ([&](const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__v)>, std::string>) return __v.substr(mid, count - mid); else return std::vector<typename std::decay_t<decltype(__v)>::value_type>(__v.begin()+mid, __v.begin()+count); })(py), (count - mid));
      |                                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/closest_pair_of_points.cpp:206:107: note:   initializing argument 2 of ‘double closest_pair_of_points_sqr(std::vector<std::vector<double> >&, std::vector<std::vector<double> >&, int64_t)’
  206 | double closest_pair_of_points_sqr(std::vector<std::vector<double>>& px, std::vector<std::vector<double>>& py, int64_t count) {
      |                                                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
